# aafc

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: CMakeLists.txt  aafc.h  common.h  helpers.h  tests.h
include/aafc/: common.h  helpers.h
include/tests/: filehandler.c  filehandler.h  fileutils.h  libaafcfunc.h
resources/: CMakeLists.txt
resources/win32/: aafc_resource.rc  aud2aafc_resource.rc  plyr_resource.rc
src/: CMakeLists.txt
src/aafc/: CMakeLists.txt  aafc.c  aafc.cpp  aafc.h  common.c  common.h  helpers.h  lib.h
src/aafc/submodules/: adpcm.c  adpcm.cpp  adpcm.h  common.c  common.cpp  dpcm.c  dpcm.cpp  dpcm.h  filetable.c  filetable.h  misc.c  misc.cpp  modifiers.c  modifiers.cpp  modifiers.h  pcm.c  pcm.cpp  pcm.h  sfpcm.c  sfpcm.cpp  sfpcm.h  stream.c  stream.h  ulaw.c  ulaw.h
src/tests/: CMakeLists.txt  fileutils.h  libaafcfunc.h
src/tests/aafc_mediaconverter/: CMakeLists.txt  aafc_mediaconverter.c  aafc_mediaconverter.cpp
src/tests/aafc_player/: CMakeLists.txt  aafc_player.c  aafc_player.cpp
src/tests/aftcreator/: CMakeLists.txt  aftcreator.cpp
